# grok-web-connector

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTES.md  README.md  STATSIG_STYLES.md  camera_batch_results.json  camera_pool_state.json  discovered_style_buckets.json  explore_style_buckets.py  explore_style_buckets_results.json  pyproject.toml  test_dynamic_scaling.py  test_env.py  test_simple_pool.py  test_worker_pool_camera.py
.github/workflows/: ci.yml
docs/: DISCOVERY_SUMMARY.md  NEW_API_USAGE.md  NOTES.md  STATSIG_STYLES.md  edit_image_analysis.md  web_automation_notes.md
docs/release-notes/: v0.19.0.md
grok_web/: __init__.py  _internal.py  agent_client.py  auth.py  auth_manager.py  browser.py  client.py  exceptions.py  models.py  nodriver_cf_verify.py  playwright_client.py  prompt_parser.py  refresh_cf_clearance.py  schema.py  selectors.py  xai_client.py
grok_web/actions/: __init__.py  direct_rest.py  extend_seed.py  imagine_input.py  navigation.py  network_monitor.py  post_image.py  post_media.py  post_menu.py  post_video.py
grok_web/pool/: __init__.py  job.py  persistence.py  worker.py  worker_pool.py
scripts/: dump_grok_banner.py
tests/: __init__.py  conftest.py  test_async_client.py  test_auth.py  test_browser.py  test_check_video_moderated.py  test_client_recovery.py  test_direct_rest.py  test_edit_image_chain_root_failloud.py  test_examples.py  test_factory.py  test_grok_client.py  test_grok_client_logic.py  test_internal_utilities.py  test_models.py  test_nodriver_client.py  test_page_discover_contract.py  test_playwright_client.py  test_pool.py  test_pool_failure_isolation.py  test_pool_profile_prefix.py  test_response_parser.py  test_selectors.py  test_silent_throttle_classifier.py  test_smart_client.py  test_upload_images_api.py  test_workflows.py  test_xai_client.py
tests/integration/: __init__.py  scenarios.json  test_worker_pool_integration.py  test_workflows.py
