[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "grok-web-connector"
dynamic = ["version"]
description = "Python client for Grok Imagine web API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "elfenliedsp@gmail.com"}
]
dependencies = [
    "pydantic>=2.0.0",
    "ai-dev-browser @ git+https://github.com/sudoprivacy/ai-dev-browser.git@v0.5.0",
]

[project.scripts]
grok-auth = "grok_web.auth_manager:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.0",
    "pre-commit>=3.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["grok_web*"]

# =============================================================================
# pytest configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "-q", "--strict-markers", "--ignore=tests/integration"]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (require real Chrome/credentials, deselect with '--ignore=tests/integration')",
]

# =============================================================================
# ruff configuration (linting + formatting)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long, handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # ternary operator - prefer explicit if/else for readability
    "SIM117", # nested with - prefer explicit for clarity
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["ARG", "S101"]  # Allow unused args and assert in tests

[tool.ruff.lint.isort]
known-first-party = ["grok_web"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# =============================================================================
# coverage configuration
# =============================================================================
[tool.coverage.run]
source = ["grok_web"]
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
