[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "grok-web-connector"
dynamic = ["version"]
description = "Python client for Grok Imagine web API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "elfenliedsp@gmail.com"}
]
dependencies = [
    "pydantic>=2.0.0",
    # 0.9.0 exposes `startup_timeout` on browser_start (default 30s) — we
    # pass it through from GrokClient so callers can raise it on slow /
    # crowded Windows machines where the old 10s hardcode timed out.
    # cloudflare_verify was removed in 0.8.0; client.py handles its
    # absence with a minimal in-tree detector.
    "ai-dev-browser>=0.9.3,<1.0",
]

[project.scripts]
grok-auth = "grok_web.auth_manager:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.0",
    "pre-commit>=3.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["grok_web*"]

# =============================================================================
# pytest configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
# Integration tests live under tests/integration/ and are skipped by default.
# Enable via `pytest --run-integration` or RUN_INTEGRATION=1 (see conftest.py).
addopts = ["-ra", "-q", "--strict-markers"]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: requires real Chrome + Grok session (off by default; --run-integration or RUN_INTEGRATION=1 to enable)",
]

# =============================================================================
# ruff configuration (linting + formatting)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long, handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # ternary operator - prefer explicit if/else for readability
    "SIM117", # nested with - prefer explicit for clarity
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["ARG", "S101"]  # Allow unused args and assert in tests

[tool.ruff.lint.isort]
known-first-party = ["grok_web"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# =============================================================================
# coverage configuration
# =============================================================================
[tool.coverage.run]
source = ["grok_web"]
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
